--- a/src/site/_includes/postcss/_variables.css
+++ b/src/site/_includes/postcss/_variables.css
@@ -4,8 +4,8 @@ $mid: 740px;
 $wide: 1200px;
 
 /* colours */
-$page-color: #2424bb;
-$text-color: #fff;
+$page-color: #fff;
+$text-color: #1a1a1a;
 $accent-color: #27a4de;
 $dark-color: #000;
 
