--- a/src/site/_includes/postcss/_variables.css
+++ b/src/site/_includes/postcss/_variables.css
@@ -6,6 +6,6 @@ $wide: 1200px;
 /* colours */
 $page-color: #fff;
 $text-color: #1a1a1a;
-$accent-color: #ccc;
+$accent-color: rgba(204,204,204,0.2);
 $dark-color: #000;
 
