Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -78,7 +78,7 @@ p {
 }
 
 .subtitle {
-  font-family: Bebas neue;
+  font-family: Bebas Neue;
   font-size: 1.2em;
   margin-top: 1em;
   margin-bottom: 5em;
