--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -79,10 +79,14 @@ p {
 
 .subtitle {
   font-family: Bebas Neue;
-  font-size: 1.2em;
+  font-size: 1.7em;
   margin-top: 1em;
   margin-bottom: 5em;
 }
+
+.bebas {
+  font-family: Bebas Neue;
+  font-size: 1.4em;}
 
 ul, ol {
   padding-left: 1em;
