--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -150,6 +150,20 @@ a:focus {
   }
 }
 
+.img-container {
+    width: 100%;
+    height: 200px;
+    max-height: 240px;
+    overflow: hidden;
+    margin: 0;
+    position: relative;
+}
+
+.img-container img {
+    position:absolute;
+    vertical-align: middle;
+    max-width: 100%;
+}
 
 code {
   font-size: 0.8em;
