--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -161,7 +161,8 @@ a:focus {
 
 .img-container img {
     position:absolute;
-    vertical-align: middle;
+    top: 50%;
+    transform: translateY(-50%);
     max-width: 100%;
 }
 
