--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -152,7 +152,8 @@ a:focus {
 
 .img-container {
     width: 100%;
-    margin: 0 auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
     position: relative;
 }
 
