--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -154,11 +154,12 @@ a:focus {
     width: 100%;
     margin-top: 1em;
     margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
     position: relative;
 }
 
 .img-container img {
-    position:absolute;
     top: 50%;
     transform: translateY(-50%);
     max-width: 100%;
