--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -160,6 +160,7 @@ img.wide {
   position: relative;
   left: 50%;
   right: 50%;
+  margin-top: 1em;
   margin-left: -50vw;
   margin-right: -50vw;
   z-index: 0;
