Actualizar base.njk

--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -10,6 +10,7 @@
 
     <div class="container">
       {% include "header.njk" %}
+			{% include "section.njk" %}
       {{ content | safe }}
       {% include "footer.njk" %}
     </div>
