--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -5,10 +5,10 @@
       </a>
 
 <a href="https://source.unsplash.com/600x600/?sig=11" data-lightbox="homePortfolio">
-        <img src="https://source.unsplash.com/600x600/?sig=11"/>
+        <img src="https://source.unsplash.com/600x800/?sig=11"/>
       </a>
   
-<a href="https://source.unsplash.com/800x600/?sig=68" data-lightbox="homePortfolio" class="horizontal">
+<a href="https://source.unsplash.com/800x600/?sig=68" data-lightbox="homePortfolio">
         <img src="https://source.unsplash.com/800x600/?sig=68"/>
       </a>
 
