--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -1,4 +1,4 @@
-<section>
+<section class="full-width">
 
 <a href="https://source.unsplash.com/600x600/?sig=24" data-lightbox="homePortfolio">
         <img src="https://source.unsplash.com/600x600/?sig=24"/>
