--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -4,7 +4,7 @@
         <img src="https://source.unsplash.com/600x600/?sig=24"/>
       </a>
 
-<a href="https://source.unsplash.com/600x600/?sig=11" data-lightbox="homePortfolio">
+<a href="https://source.unsplash.com/600x600/?sig=11" data-lightbox="homePortfolio" class="vertıcal">
         <img src="https://source.unsplash.com/600x800/?sig=11"/>
       </a>
   
