--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -8,7 +8,7 @@
         <img src="https://source.unsplash.com/600x800/?sig=11"/>
       </a>
   
-<a href="https://source.unsplash.com/800x600/?sig=68" data-lightbox="homePortfolio">
+<a href="https://source.unsplash.com/800x600/?sig=68" data-lightbox="homePortfolio" class="horizontal">
         <img src="https://source.unsplash.com/800x600/?sig=68"/>
       </a>
 
