--- a/src/site/_includes/postcss/_fonts.css
+++ b/src/site/_includes/postcss/_fonts.css
@@ -1,20 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Serif&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap');
 
 @import url("https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap");
-
-@font-face {
-  font-family: 'Inter-Thin';
-  src:url(../Inter/static/Inter-Thin.ttf) format('truetype');
-  font-weight:lighter;
-}
-
-@font-face {
-  font-family: 'Inter-Regular';
-  src:url(../Inter/static/Inter-Regular.ttf) format('truetype');
-  font-weight:normal;
-}
-@font-face {
-  font-family: 'Inter-Bold';
-  src:url(../Inter/static/Inter-Bold.ttf) format('truetype');
-  font-weight:bold;
-}
