--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -24,8 +24,8 @@ body {
   text-align: center;
   background-color: $page-color;
   color: mix($text-color, $page-color, 90%);
-  font-family: sans-serif;
-  font-weight: 300;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
   min-height: 100vh;
@@ -112,7 +112,7 @@ p {
 }
 
 .bebas {
-  font-weight: 600;
+  font-weight: 700;
 }
 
 ul, ol {
