--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -80,7 +80,7 @@ section {
 
 h1, h2, h3 {
   color: $text-color;
-  font-weight: 600;
+  font-weight: 700;
   margin-top: 2em;
   margin-bottom:0.2em;
   line-height: 1;
@@ -105,7 +105,7 @@ p {
 }
 
 .subtitle {
-  font-family: Bebas Neue;
+  font-family: 'Bebas Neue' , sans-serif;
   font-size: 1.5em;
   margin-top: 1em;
   margin-bottom: 2.7em;
@@ -206,7 +206,7 @@ code {
 
 .date {
   font-size: 0.8em;
-  font-style: italic;
+  font-weight: 200;
 }
 
 main {
