--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -113,7 +113,13 @@ p {
 }
 
 .bebas {
+  font-size: 17px;
   font-weight: 700;
+}
+
+.descriptor {
+  font-family: 'Inter',sans-serif;
+  font-weight: 200;
 }
 
 ul, ol {
