--- a/src/site/_includes/postcss/_fonts.css
+++ b/src/site/_includes/postcss/_fonts.css
@@ -1,3 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap');
 
 @import url("https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap');
+
