--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -105,9 +105,9 @@ p {
 }
 
 .subtitle {
-  font-family: 'Bebas Neue' , Inter , sans-serif;
+  font-family: 'PT Sans' , Inter , sans-serif;
   font-size: 1.5em;
-  font-weight: 200;
+  font-weight: 700;
   margin-top: 1em;
   margin-bottom: 2.7em;
 }
