Actualizar footer.njk

--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -1,8 +1,10 @@
 <footer>
 <p>
+	Este sitio fue elaborado a partir de la plantilla creada por <strong>Phil Hawksworth</strong> para Eleventy...
+<p>
   The code is maintained by <a href="https://twitter.com/philhawksworth">Phil Hawksworth</a> for his own reference and as a quick start for some of his projects, but take it if it is useful for you too. Find the repo on <a href="{{ pkg.repository.url }}">GitHub</a>.
 </p>
 <p>
-  This page was generated on {{ site.buildTime | dateDisplay('LLL d, yyyy - HH:mm') }}
+  Esta p{agina se generó en {{ site.buildTime | dateDisplay('LLL d, yyyy - HH:mm') }}
 </p>
 </footer>
