--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -1,15 +1,15 @@
 <section class="full-width">
 
-<a href="https://source.unsplash.com/600x600/?sig=24" data-lightbox="homePortfolio">
+<a href="/">
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1702942753/2024-assets/IMG_0858.jpg"/>
       </a>
 
-<a href="https://source.unsplash.com/600x600/?sig=11" data-lightbox="homePortfolio" class="vertıcal">
-        <img src="https://res.cloudinary.com/magnvs/image/upload/v1702942749/2024-assets/IMG_0859.jpg"/>
+<a href="/" class="vertıcal">
+        <img src="https://res.cloudinary.com/magnvs/image/upload/v1702957059/2024-assets/IMG_0862.jpg"/>
       </a>
   
-<a href="https://source.unsplash.com/800x600/?sig=68" data-lightbox="homePortfolio" class="horizontal">
-        <img src="https://res.cloudinary.com/magnvs/image/upload/v1702942746/2024-assets/IMG_0860.jpg"/>
+<a href="/" class="horizontal">
+        <img src="https://res.cloudinary.com/magnvs/image/upload/v1702957059/2024-assets/IMG_0861.jpg"/>
       </a>
 
 </section>
