--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -77,6 +77,11 @@ section {
   };
 }
 
+.container > img {
+  width: 100%;
+  margin-top: 2em;
+  margin-bottom: 1.7em;
+  }
 
 h1, h2, h3 {
   color: $text-color;
