Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -77,16 +77,10 @@ section {
   };
 }
 
-div.container > img {
+img {
   width: 90%;
   margin-top: 1.7em;
   margin-bottom: 1.7em;
-  @media (min-width: $mid) {
-    width: 90vw;
-  };
-  @media (min-width: $wide) {
-    width: 90vw;
-  };
 }
 
 h1, h2, h3 {
