--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -79,8 +79,8 @@ section {
 
 img {
   width: 100%;
-  margin-top: 1.7em;
-  margin-bottom: 1.7em;
+  margin-top: .7em;
+  margin-bottom: 1.2em;
 }
 
 h1, h2, h3 {
