--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -111,8 +111,9 @@ p {
 
 .subtitle {
   font-family: 'PT Sans' , Inter , sans-serif;
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-weight: 700;
+  line-height: .7;
   margin-top: 1em;
   margin-bottom: 2.7em;
 }
