--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -113,7 +113,7 @@ p {
   font-family: 'PT Sans' , Inter , sans-serif;
   font-size: 1.3em;
   font-weight: 700;
-  line-height: .7;
+  line-height: 1;
   margin-top: 1em;
   margin-bottom: 2.7em;
 }
