Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -128,6 +128,11 @@ p {
   font-family: 'Inter',sans-serif;
   font-weight: 200;
 }
+.pearl-river {
+  background-color: #D9DDDC;
+  margin: 0 -1em;
+  padding: 0 1em;
+}
 
 ul, ol {
   padding-left: 1em;
