Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -130,8 +130,8 @@ p {
 }
 .pearl-river {
   background-color: #D9DDDC;
-  margin: 0 -1em;
-  padding: 0 1em;
+  margin: 0 -1.2em;
+  padding: 2em 1.3em 1.5em 1.3em;
 }
 
 ul, ol {
