--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -131,7 +131,13 @@ p {
 .pearl-river {
   background-color: #D9DDDC;
   margin: 0 -1.2em;
-  padding: 1.6em 1.3em 1.5em 1.3em;
+  padding: 1.4em 1.3em 1.5em 1.3em;
+}
+
+.meta-river {
+  background-color: #a0d9e5;
+  margin: 0 -1.2em;
+  padding: 1.4em 1.3em 1.5em 1.3em;
 }
 
 ul, ol {
