Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -130,7 +130,7 @@ p {
 }
 .pearl-river {
   background-color: #D9DDDC;
-  margin: 0 -1.2em;
+  margin: auto -1.2em;
   padding: 1em 1.5em 1.6em 1.5em;
 }
 
