--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -135,12 +135,19 @@ p {
   padding: 1em 1.5em 1.6em 1.5em;
 }
 
+.pearl-river > h2 {
+  margin-top:.7em;
+}
+
 .meta-river {
   background-color: #a0d9e5;
   margin: 0 -1.2em;
   padding: 1.4em 1.3em 1.5em 1.3em;
 }
 
+.meta-river > h2 {
+  margin-top:.7em;
+}
 ul, ol {
   padding-left: 1em;
 }
