--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -77,6 +77,19 @@ section {
   };
 }
 
+figure {
+	width: 105%;
+  margin: 0;
+  padding: 0;
+}
+
+figcaption {
+  font-size: 0.8em;
+  font-style: italic;
+  top-padding: 5px;
+  top-margin: 0;
+}
+
 img {
   width: 100%;
   margin-top: .7em;
