--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -79,7 +79,7 @@ section {
 
 figure {
 	width: 105%;
-  margin: 0 0 0 -15px;
+  margin: 0 0 0 -10px;
   padding: 0;
 }
 
@@ -93,7 +93,7 @@ figcaption {
 img {
   width: 100%;
   margin-top: .7em;
-  margin-bottom: 1.2em;
+  margin-bottom: .9em;
 }
 
 h1, h2, h3 {
