--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -138,6 +138,16 @@ p {
   margin-bottom: 2.7em;
 }
 
+.intro {
+  font-family: 'PT Serif', serif;
+  font-size: .9;
+  font-weight: 400;
+  font-style: italic;
+  line-height: 1;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 .ptsans {
   font-family: 'PT Sans', sans-serif;
   font-size: 18px;
