Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -143,6 +143,7 @@ p {
   font-size: .9;
   font-weight: 400;
   font-style: italic;
+  text-align: center;
   line-height: 1;
   margin-top: 1em;
   margin-bottom: 1em;
