--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -140,13 +140,13 @@ p {
 
 .intro {
   font-family: 'PT Serif', serif;
-  font-size: .9;
+  font-size: 1;
   font-weight: 400;
   font-style: italic;
   text-align: center;
-  line-height: 1;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  line-height: 1.3;
+  margin-top: 1.2em;
+  margin-bottom: 1.2em;
 }
 
 .ptsans {
