--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -140,13 +140,14 @@ p {
 
 .intro {
   font-family: 'PT Serif', serif;
-  font-size: 1;
+  font-size: 1.2;
   font-weight: 400;
   font-style: italic;
   text-align: center;
-  line-height: 1.3;
+  line-height: 1.4;
   margin-top: 1.2em;
   margin-bottom: 1.2em;
+  color:#ff8300;
 }
 
 .ptsans {
