--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -225,7 +225,7 @@ a:focus {
   padding-top: 3em;
 
   li {
-    display: inline;
+    display: inline-block;
     padding-bottom: 1em;
     margin-bottom: .7em;
   }
