--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -140,7 +140,7 @@ p {
 
 .intro {
   font-family: 'PT Serif', serif;
-  font-size: 1.2;
+  font-size: 1.3;
   font-weight: 400;
   font-style: italic;
   text-align: center;
@@ -225,9 +225,9 @@ a:focus {
   padding-top: 3em;
 
   li {
-    display: inline-block;
+    display: inline;
     padding-bottom: 1em;
-    margin-bottom: .7em;
+    margin-bottom: 1em;
   }
 
   a:link,
