Actualizar section.njk

--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -1,7 +1,7 @@
 <section class="full-width">
 
-<a href="/">
-        <img src="https://res.cloudinary.com/magnvs/image/upload/v1702942753/2024-assets/IMG_0858.jpg"/>
+<a href="/posts/paul-palacio/">
+        <img src="https://res.cloudinary.com/magnvs/image/upload/v1707309628/IMG_20240128_155547_fyavya.jpg"/>
       </a>
 
 <a href="/" class="vertıcal">
