--- a/src/site/_includes/article.njk
+++ b/src/site/_includes/article.njk
@@ -1,9 +1,7 @@
-{% assign post = site.posts.first %}
-{% assign content = post.content %}
+{% assign note = site.notes.first %}
+{% assign content = note.content %}
 
 <article >
-  <h2><a href="{{post.url}}">{{ post.title }}</a></h2>
-  <small>En {{ post.location }}</small>
-  {{ post.content }}
-  <small>Publicado por <a href="#footer">Fernando</a> el {{ post.date | date_to_string }}</small>
-</article>
+  <h2><a href="{{note.url}}">{{ note.title }}</a></h2>
+  {{ note.content }}
+  </article>
