--- a/src/site/_includes/article.njk
+++ b/src/site/_includes/article.njk
@@ -1,7 +1,9 @@
-{% assign page = collections.note.first %}
-{% assign content = page.content %}
+{% for page in collections.note | first %}
 
 <article >
   <h2><a href="{{page.url}}">{{ page.title }}</a></h2>
-  {{ page.content | safe }}
-  </article>
+  {{ content | safe }}
+</article>
+
+
+{% endfor %}
