--- a/src/site/_includes/article.njk
+++ b/src/site/_includes/article.njk
@@ -1,4 +1,4 @@
-{% for page in collections.note | first %}
+{% for page in collections.note %}
 
 <article >
   <h2><a href="{{page.url}}">{{ page.title }}</a></h2>
