--- a/src/site/_includes/article.njk
+++ b/src/site/_includes/article.njk
@@ -1,7 +1,8 @@
 {% for page in collections.note %}
 
 <article >
-  <h2><a href="{{page.url}}">{{ page.title }}</a></h2>
+  <h2><a href="{{page.url}}">{{ page.data.title }}</a></h2>
+  {{ page.content }}
 </article>
 
 
