--- a/src/site/_includes/article.njk
+++ b/src/site/_includes/article.njk
@@ -2,7 +2,7 @@
 
 <article >
   <h2><a href="{{page.url}}">{{ page.data.title }}</a></h2>
-  {{ page.content }}
+  {{ page.content | safe }}
 </article>
 
 
