Actualizar article.njk

--- a/src/site/_includes/article.njk
+++ b/src/site/_includes/article.njk
@@ -1,5 +1,4 @@
-{% assign page = site.notes.first %}
-{% assign content = content %}
+{% assign page = collections.note.first %}
 
 <article >
   <h2><a href="{{page.url}}">{{ page.data.title }}</a></h2>
