Actualizar article.njk

--- a/src/site/_includes/article.njk
+++ b/src/site/_includes/article.njk
@@ -3,7 +3,7 @@
   <p><a href="{{ page.url }}"><strong>{{ page.data.title }}</strong></a>
 	<small> {{ page.data.excerpt }}</small></p>
 
-{{ page.content | safe }}
+{{ content | safe }}
 
 {% endfor %}
 
