Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -192,6 +192,12 @@ p {
   margin-top: 1em;
 }
 
+.fleuron {
+  font-size: 20px;
+  color: #bada55;
+  text-align: center;
+}
+  
 ul, ol {
   padding-left: 1em;
 }
