--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -184,7 +184,7 @@ p {
 .ocre-river {
   background-color: rgba(160,217,229,.2);
   margin: auto -1.1em;
-  padding: 1em 1.5em 1.1em 1.5em;
+  padding: .7em 1.5em 1em 1.5em;
 }
 
 .ocre-river > h2 {
