Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -189,11 +189,11 @@ p {
 
 .ocre-river > h2 {
   margin-top: 1em;
-  color: brown;
+  color: #a0d9e5;
 }
 
 .ocre-river > a {
-  color: brown;
+  color: #a0d9e5;
 }
 
 .fleuron {
