--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -5,7 +5,7 @@
       </a>
 
 <a href="/" class="vertıcal">
-        <img src="https://res.cloudinary.com/magnvs/image/upload/v1702957059/2024-assets/IMG_0862.jpg"/>
+        <img src="https://res.cloudinary.com/magnvs/image/upload/v1577737514/gknjuj0i97vy7lhelyoa.png"/>
       </a>
   
 <a href="/" class="horizontal">
