--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -4,10 +4,10 @@
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1707309628/IMG_20240128_155547_fyavya.jpg"/>
       </a>
 
-<a href="/" class="vertıcal">
+<a href="/articles/guangala/" class="vertıcal">
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1577737514/gknjuj0i97vy7lhelyoa.png"/>
       </a>
-  
+
 <a href="/" class="horizontal">
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1702957059/2024-assets/IMG_0861.jpg"/>
       </a>
