--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -166,10 +166,10 @@ p {
   color: rgba(255,255,255,0.7);
   margin: auto -1.1em;
   padding: 1em 1em 1.6em 1em;
-  width: 100vw;
+  width: 100%;
 }
 
-.pearl-river > h2, a {
+.pearl-river > h2 {
   margin-top:1em;
   color: orange;
 }
