--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -174,6 +174,10 @@ p {
   color: orange;
 }
 
+.pearl-river > a {
+  color: orange;
+}
+
 .meta-river {
   background-color: #a0d9e5;
   margin: 0 -1.1em;
