--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -211,7 +211,7 @@ ul, ol {
 
 a:link,
 a:visited {
-  color: $text-color;
+  color: silver;
   text-decoration: none;
   border-bottom-style: solid;
   border-bottom-width: 1px;
