--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -167,6 +167,18 @@ p {
   margin: auto -1.1em;
   padding: 1em 1em 1.6em 1em;
   width: 100%;
+  
+  
+  a:link,
+  a:visited {
+    color: mix($text-color, $accent-color, 90%);
+    border-bottom: solid 1px mix($accent-color, $page-color, 70%);
+  }
+  a:hover,
+  a:focus {
+    color: $text-color;
+    border-bottom: solid 1px $text-color;
+  }
 }
 
 .pearl-river > h2 {
@@ -211,7 +223,7 @@ ul, ol {
 
 a:link,
 a:visited {
-  color: #71797E;
+  color: $text-color;
   text-decoration: none;
   border-bottom-style: solid;
   border-bottom-width: 1px;
