--- a/src/site/_includes/postcss/_grid.css
+++ b/src/site/_includes/postcss/_grid.css
@@ -1,13 +1,13 @@
 /********* NESTED GRID ************/
 .cards{
-	margin:1rem 0rem;
+	margin:0;
 	display:grid;
 	grid-template-columns:1fr 3fr;
 	grid-template-rows:min-content auto;
 	grid-template-areas:
 		"image heading"
 		"image para";
-	grid-column-gap:1rem;
+	grid-column-gap:0.7rem;
 }
 .cards h2{
 	grid-area:heading;
