--- a/src/site/_includes/postcss/_grid.css
+++ b/src/site/_includes/postcss/_grid.css
@@ -11,12 +11,13 @@
 }
 .cards h2{
 	grid-area:heading;
+	margin-top: 0;
 	margin-bottom: 0.3rem;
 }
 .cards img{
 	grid-area:image;
 	margin: 0;
-	padding: 0.6rem 0rem 0rem 0rem;
+	padding: 1rem 0rem 0rem 0rem;
 	border-radius: 3px;
 }
 .cards p{
