--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -199,7 +199,7 @@ p {
 .ocre-river {
   background-color: rgba(160,217,229,.1);
   margin: auto -1.1em;
-  padding: 1.5em 0.3em;
+  padding: 1.8em 0.2em 1.2em 0.2em;
 }
 
 .ocre-river > h2 {
