--- a/src/site/_includes/postcss/_grid.css
+++ b/src/site/_includes/postcss/_grid.css
@@ -13,6 +13,7 @@
 	grid-area:heading;
 	margin-top: 0.5rem;
 	margin-bottom: 0.3rem;
+	border: 1px solid red;
 }
 .cards img{
 	grid-area:image;
@@ -24,7 +25,7 @@
 .cards p{
 	grid-area:para;
 	font-size: 16px;
- line-height: 1.4;
- padding-right: 0.5em;
+  line-height: 1.4;
+  padding-right: 0.5em;
 	border: 1px solid black;
 }
