--- a/src/site/_includes/postcss/_grid.css
+++ b/src/site/_includes/postcss/_grid.css
@@ -13,8 +13,7 @@
 	grid-area:heading;
 	margin-top: 0.5rem;
 	margin-bottom: 0.3rem;
-	align-self: center;
-	border: 1px solid red;
+	align-self: end;
 }
 .cards img{
 	grid-area:image;
@@ -28,5 +27,4 @@
 	font-size: 16px;
   line-height: 1.4;
   padding-right: 0.5em;
-	border: 1px solid black;
 }
