--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -319,9 +319,8 @@ img.wide-opaque {
 }
 
 .middle {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
+  width: 92%;
 }
 
 code {
