Actualizar styles.css

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -319,8 +319,9 @@ img.wide-opaque {
 }
 
 .middle {
-  margin: auto;
-  width: 92%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 code {
