Actualizar section.njk

--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -4,7 +4,7 @@
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1707309628/IMG_20240128_155547_fyavya.jpg"/>
       </a>
 
-<a href="/articles/guangala/" class="vertıcal">
+<a href="#serra" class="vertıcal">
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1577737514/gknjuj0i97vy7lhelyoa.png"/>
       </a>
 
