Actualizar section.njk

--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -5,7 +5,7 @@
       </a>
 
 <a href="#serra" class="vertıcal">
-        <img src="https://res.cloudinary.com/magnvs/image/upload/v1577737514/gknjuj0i97vy7lhelyoa.png"/>
+        <img src="https://res.cloudinary.com/magnvs/image/upload/v1711675928/IMG_1625_miaoqd.jpg"/>
       </a>
 
 <a href="/" class="horizontal">
