--- a/src/site/_includes/postcss/_variables.css
+++ b/src/site/_includes/postcss/_variables.css
@@ -6,6 +6,7 @@ $wide: 1200px;
 /* colours */
 $page-color: #fff;
 $text-color: #1a1a1a;
-$accent-color: rgba(225,165,0,0.9);
+$accent-color: rgba(229,227,225,0.2);
+$ny-color: rgba(225,165,0,0.9);
 $dark-color: #000;
 
