--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -165,7 +165,7 @@ p {
 
 .purple-river {
   background-image: linear-gradient(#8aa5de 57%, $accent-color);
-  color: rgba(255,255,255,0.7);
+  color: #000435;
   margin: auto -1.1em;
   padding: 1em 1em 1.6em 1em;
   border-radius: 7px;
@@ -173,12 +173,12 @@ p {
   
   a:link,
   a:visited {
-    color: #71797E;
+    color: #000435;
     border-bottom: solid 1px rgba(255,255,255,0.7);
   }
   a:hover,
   a:focus {
-    color: #71797E;
+    color: #000435;
     border-bottom: solid 1px rgba(255,255,255,0.7);
   }
 }
