--- a/src/site/_includes/layouts/filestack.njk
+++ b/src/site/_includes/layouts/filestack.njk
@@ -1,1 +1,22 @@
-<script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
+    <title>{{ title }}</title>
+		<script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+  </head>
+  <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
+
+    <div class="container">
+      {% include "header.njk" %}
+
+      {{ content | safe }}
+
+      {% include "footer.njk" %}
+    </div>
+    <script>{{ js | jsmin | safe }}</script>
+
+  </body>
+</html>
