Actualizar filestack.njk

--- a/src/site/_includes/layouts/filestack.njk
+++ b/src/site/_includes/layouts/filestack.njk
@@ -16,7 +16,8 @@
 
       {% include "footer.njk" %}
     </div>
-    <script>{{ js | jsmin | safe }}</script>
+    <script>{{ const client = filestack.init(AyRFVFuQmQCiM7iCPDo1Vz);
+							 client.picker().open(); }}</script>
 
   </body>
 </html>
