--- a/src/site/_includes/layouts/filestack.njk
+++ b/src/site/_includes/layouts/filestack.njk
@@ -16,7 +16,10 @@
 
       {% include "footer.njk" %}
     </div>
-    <script>{{ const client = filestack.init(AyRFVFuQmQCiM7iCPDo1Vz);client.picker().open(); }}</script>
+    <script>
+			const client = filestack.init(AyRFVFuQmQCiM7iCPDo1Vz);
+			client.picker().open();
+		</script>
 
   </body>
 </html>
