--- a/src/site/_includes/layouts/filestack.njk
+++ b/src/site/_includes/layouts/filestack.njk
@@ -16,7 +16,7 @@
 
       {% include "footer.njk" %}
     </div>
-
+<script>{{ js | jsmin | safe }}</script>
 <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
 <script>{{ const client = filestack.init(AyRFVFuQmQCiM7iCPDo1Vz);
 	client.picker().open(); }}</script>
