--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -4,8 +4,8 @@
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1707309628/IMG_20240128_155547_fyavya.jpg"/>
       </a>
 
-<a href="post/richard-serra/" class="vertıcal">
-        <img src="/https://res.cloudinary.com/magnvs/image/upload/v1711675928/IMG_1625_miaoqd.jpg/"/>
+<a href="/posts/richard-serra/" class="vertıcal">
+        <img src="https://res.cloudinary.com/magnvs/image/upload/v1711675928/IMG_1625_miaoqd.jpg"/>
       </a>
 
 <a href="/" class="horizontal">
