Actualizar section.njk

--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -4,7 +4,7 @@
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1707309628/IMG_20240128_155547_fyavya.jpg"/>
       </a>
 
-<a href="/posts/richard-serra/" class="vertıcal">
+<a href="/posts/richard_serra/" class="vertıcal">
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1711675928/IMG_1625_miaoqd.jpg"/>
       </a>
 
