Actualizar section.njk

--- a/src/site/_includes/section.njk
+++ b/src/site/_includes/section.njk
@@ -8,7 +8,7 @@
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1711675928/IMG_1625_miaoqd.jpg"/>
       </a>
 
-<a href="/" class="horizontal">
+<a href="santiago" class="horizontal">
         <img src="https://res.cloudinary.com/magnvs/image/upload/v1720112818/IMG_1936_xwtc7w.jpg"/>
       </a>
 
