--- a/src/site/_includes/postcss/_fonts.css
+++ b/src/site/_includes/postcss/_fonts.css
@@ -4,3 +4,5 @@
 
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap');
+
