--- a/src/site/_includes/postcss/_fonts.css
+++ b/src/site/_includes/postcss/_fonts.css
@@ -6,3 +6,4 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
