--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -116,6 +116,9 @@ h1 {
   margin-top:0.4em;
   margin-bottom:0.2em;
   line-height: 1;
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 
   @media (min-width: $mid) {
     font-size: 5em;
