--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <title>{{ title }}</title>
+    <link rel="stylesheet" href="//brick.freetls.fastly.net/Gentium+Basic:400,700">
   </head>
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
 
