--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -116,7 +116,8 @@ h1 {
   margin-top:0.4em;
   margin-bottom:0.2em;
   line-height: 1;
-  font-family: "Anton", sans-serif;
+  font-family: "Gentium Basic";
+  font-weight: 700;
   font-style: normal;
 
   @media (min-width: $mid) {
